# ble_sofa

./: README.md
android/workspace/ble_control/: settings.gradle
android/workspace/ble_control/app/: build.gradle
android/workspace/ble_control/app/src/androidTest/java/com/example/ble_control/: ExampleInstrumentedTest.kt
android/workspace/ble_control/app/src/main/: AndroidManifest.xml
android/workspace/ble_control/app/src/main/java/com/example/ble_control/: BlePermissions.kt  BleScanner.kt  BleService.kt  MainActivity.kt
android/workspace/ble_control/app/src/main/java/com/example/ble_control/ui/theme/: Color.kt  Theme.kt  Type.kt
android/workspace/ble_control/app/src/main/res/layout/: activity_main.xml
android/workspace/ble_control/app/src/main/res/values/: strings.xml  themes.xml
android/workspace/ble_control/app/src/test/java/com/example/ble_control/: ExampleUnitTest.kt
android/workspace/ble_control/gradle/wrapper/: gradle-wrapper.properties
android/workspace/ble_scanner/: settings.gradle
android/workspace/ble_scanner/app/: build.gradle
android/workspace/ble_scanner/app/src/main/java/com/example/ble_scanner/: BleScanner.kt  MainActivity.kt
android/workspace/ble_scanner/app/src/main/java/com/example/ble_scanner/ui/theme/: Theme.kt
android/workspace/ble_scanner/gradle/wrapper/: gradle-wrapper.properties
android/workspace/ble_sofa_app/: settings.gradle
android/workspace/ble_sofa_app/app/: build.gradle
android/workspace/ble_sofa_app/app/src/androidTest/java/com/example/ble_sofa_app/: ExampleInstrumentedTest.kt
android/workspace/ble_sofa_app/app/src/main/: AndroidManifest.xml
android/workspace/ble_sofa_app/app/src/main/java/com/example/ble_sofa_app/: BlePermissions.kt  BleScanner.kt  BleService.kt  MainActivity.kt
android/workspace/ble_sofa_app/app/src/main/java/com/example/ble_sofa_app/ui/theme/: Color.kt  Theme.kt  Type.kt
android/workspace/ble_sofa_app/app/src/main/res/layout/: activity_main.xml
android/workspace/ble_sofa_app/app/src/main/res/values/: strings.xml  themes.xml
android/workspace/ble_sofa_app/app/src/test/java/com/example/ble_sofa_app/: ExampleUnitTest.kt
android/workspace/ble_sofa_app/gradle/wrapper/: gradle-wrapper.properties
doc/: ble_sofa_app.md  example_projects.md
images/schemas/: ble_sofa_diagram.odg  bloc_command_sofa.odg  rj9_connector.odg  sofa_system_overview.odg
images/schemas/example_projects/: ble_control_diagram.odg  led_control_diagram.odg  relay_control_diagram.odg
kicad/3d_models/lm2596-buck-converter/: 220 35V Capacitor, LM2596 Buck Converter 4.0-40 to 1.3-37V.SLDPRT  3 Digit 7 Segment Display, LM2596 Buck Converter 4.0-40 to 1.3-37V.SLDPRT  Base,  LM2596 Buck Converter 4.0-40 to 1.3-37V.SLDPRT  DG301-5.0-02, LM2596 Buck Converter 4.0-40 to 1.3-37V.SLDPRT  Description.txt  LM2596 Buck Converter 4.0-40 to 1.3-37V.SLDASM  LM2596 Buck Converter 4.0-40 to 1.3-37V.x_b  Trimpot 3296W, LM2596 Buck Converter 4.0-40 to 1.3-37V.SLDPRT
kicad/3d_models/pico_dual_channel_relay_hat/: Pico_Dual_Channel_Relay_HAT.FCStd  Pico_Dual_Channel_Relay_HAT.FCStd1
kicad/3d_models/rj9-4p4c-embase/: RJ9-4P4C-Embase.FCStd  RJ9-4P4C-Embase.step
kicad/ble_sofa_board/: ble_sofa_board.kicad_pcb  ble_sofa_board.kicad_pro  ble_sofa_board.kicad_sch  fp-lib-table  sym-lib-table
kicad/ble_sofa_board/export/: .gitignore
kicad/libraries/AZ_Delivery/: AZ_Delivery.kicad_sym
kicad/libraries/AZ_Delivery/AZ_Delivery.pretty/: LM2596S_Buck_Module.kicad_mod
kicad/libraries/LibreSolar/: .gitignore  4P4C_narrow.kicad_mod
kicad/libraries/Raspberry_Pi_Pico_W_Kicad_Files/: MODULE_SC0918.kicad_mod  README.md
kicad/libraries/SB_Components/: SB_Components.kicad_sym
kicad/libraries/SB_Components/SB_Components.pretty/: OLED_I2C_128x32_SSD1306.kicad_mod  Pico_Dual_Channel_Relay_HAT.kicad_mod
pico/: .gitignore
pico/workspace/: CMakeLists.txt
pico/workspace/ble_sofa_app/: CMakeLists.txt  ble_sofa_app.c  btstack_config.h  mygatt.gatt  relay.c  relay.h
pico/workspace/lib/relay/: CMakeLists.txt  relay.c
pico/workspace/lib/relay/inc/: relay.h
pico/workspace/lib/ssd1306/: CMakeLists.txt
pico/workspace/lib/ssd1306/inc/: ssd1306.h
pico/workspace/tests/: CMakeLists.txt
pico/workspace/tests/ble_control/: CMakeLists.txt  ble_control.c  mygatt.gatt
pico/workspace/tests/led_control/: CMakeLists.txt  led_control.c
pico/workspace/tests/oled_control/: CMakeLists.txt  ascii_bitmap.h  oled_control.c  ssd1306.c  ssd1306.h
pico/workspace/tests/read_ina219/: CMakeLists.txt  read_ina219.c
pico/workspace/tests/relay_control/: CMakeLists.txt  relay_control.c
